force-app/main/default/objects/Apttus_Billing__GatewayCommunication__c/Apttus_Billing__GatewayCommunication__c.object-meta.xml
<CustomObject>
    <description>Represents request and responses during a communication with a 3rd party Gateway.</description>
    <label>Gateway Communication</label>
    <nameField>
        <displayFormat>GWC-{0000000000}</displayFormat>
        <label>Gateway Communication Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gateway Communications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>