force-app/main/default/objects/Apttus_Billing__GatewayCommunication__c/fields/Apttus_Billing__CommunicationDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CommunicationDate__c</fullName>
    <description>Date/Time when the communication sent/received to/from the Gateway.</description>
    <inlineHelpText>Date/Time when the communication sent/received to/from the Gateway.</inlineHelpText>
    <label>Communication Date</label>
    <type>DateTime</type>
</CustomField>