force-app/main/default/objects/Apttus_Billing__GatewayCommunication__c/fields/Apttus_Billing__GatewayTransactiontId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__GatewayTransactiontId__c</fullName>
    <description>The associated gateway transaction id.</description>
    <inlineHelpText>The associated gateway transaction id.</inlineHelpText>
    <label>Gateway Transaction Id</label>
    <referenceTo>Apttus_Billing__GatewayTransaction__c</referenceTo>
    <relationshipLabel>Gateway Communications</relationshipLabel>
    <relationshipName>GatewayCommunications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>