force-app/main/default/objects/Apttus_Billing__GatewayCommunication__c/fields/Apttus_Billing__Payload__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Payload__c</fullName>
    <description>The entire payload sent/received to/from the Gateway.</description>
    <inlineHelpText>The entire payload sent/received to/from the Gateway.</inlineHelpText>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>