force-app/main/default/objects/Apttus_Billing__GatewayCommunication__c/fields/Apttus_Billing__PayloadType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PayloadType__c</fullName>
    <description>The type of payload sent/received to/from the Gateway.</description>
    <inlineHelpText>The type of payload sent/received to/from the Gateway.</inlineHelpText>
    <label>Payload Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>