force-app/main/default/objects/Apttus_Billing__GatewayCommunication__c/fields/Apttus_Billing__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Status__c</fullName>
    <description>Status of the communication with the gateway.</description>
    <inlineHelpText>Status of the communication with the gateway.</inlineHelpText>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>