force-app/main/default/objects/Apttus_Billing__GatewayCommunication__c/fields/Apttus_Billing__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Type__c</fullName>
    <description>Request/Response type. Ex: Authorize, Capture, Sale etc</description>
    <inlineHelpText>Request/Response type. Ex: Authorize, Capture, Sale etc</inlineHelpText>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>